--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <style>
+      .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: #111d4a;
+        color: white;
+        font-size: 18px;
+        font-weight: bold;
+        width: 100%;
+        height: 75px;
+        display: flex;
+        align-items: center;
+      }
+
+      .navbar ul {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+        height: 100%;
+      }
+
+      .navbar li {
+        padding-right: 24px;
+        height: 100%;
+      }
+
+      .navbar li:hover {
+        opacity: 0.8;
+      }
+
+      .navbar a {
+        text-decoration: none;
+        color: white;
+      }
+    </style>
+    <div id="root" class="navbar">
+      <ul>
+        <a onclick="singleSpaNavigate('/app1')">
+          <li>
+            App 1
+          </li>
+        </a>
+        <a onclick="singleSpaNavigate('/app2')">
+          <li>
+            App 2
+          </li>
+        </a>
+      </ul>
+    </div>
   </body>
 </html>
