feat: 将angular app改造为微应用

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       {
         "imports": {
           "@portal/app1": "http://localhost:9091/index.js",
+          "@portal/app2": "http://localhost:9092/index.js",
           "@portal/app3": "http://localhost:9093/index.js"
         }
       }
