--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
     <title>single-spa-demo</title>
   </head>
   <body>
-    <script type="systemjs-importmap">
-      {
-        "imports": {
-          "@portal/app1": "http://localhost:9091/index.js",
-          "@portal/app2": "http://localhost:9092/index.js",
-          "@portal/app3": "http://localhost:9093/index.js"
-        }
-      }
-    </script>
-    <script src="https://unpkg.com/systemjs@4.1.0/dist/system.js"></script>
-    <script src="https://unpkg.com/systemjs@4.1.0/dist/extras/amd.js"></script>
-    <script src="https://unpkg.com/systemjs@4.1.0/dist/extras/named-exports.js"></script>
-    <script src="https://unpkg.com/systemjs@4.1.0/dist/extras/use-default.js"></script>
+    <script src="system.js"></script>
+    <script src="extras/amd.js"></script>
+    <script src="extras/named-exports.js"></script>
+    <script src="extras/use-default.js"></script>
 
     <div id="root"></div>
   </body>
