feat: 首页引入antd组件,方便后续加入更多内容,并解决在有路由的情况下,刷新页面报错的问题

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>single-spa-demo</title>
   </head>
   <body>
-    <script src="system.js"></script>
-    <script src="extras/amd.js"></script>
-    <script src="extras/named-exports.js"></script>
-    <script src="extras/use-default.js"></script>
+    <script src="/system.js"></script>
+    <script src="/extras/amd.js"></script>
+    <script src="/extras/named-exports.js"></script>
+    <script src="/extras/use-default.js"></script>
 
     <div id="root"></div>
   </body>
