抽离react,react-dom公共依赖,增加ant-design-pro应用

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="/extras/amd.js"></script>
     <script src="/extras/named-exports.js"></script>
     <script src="/extras/use-default.js"></script>
+
+    <script type="systemjs-importmap">
+      {
+        "imports": {
+          "react": "/react.development.js",
+          "react-dom": "/react-dom.development.js"
+        }
+      }
+    </script>
     <div id="root"></div>
   </body>
 </html>
